# claude-mcp-agent-github-comments

./: .env.example  .github-pr-agent.yaml  .gitignore  CLAUDE_TIPS.md  INSTALL.md  MCP_SETUP.md  PHASE_1_5_RESULTS.md  PR72_FIX_PLAN.md  QUICKSTART.md  QUICK_HELP_TEMPLATE.txt  README.md  TEST_RESULTS.md  apply_fixes_pr72.py  check_mcp_usage.sh  pyproject.toml  test_phase_1_5.py  test_real_pr.py  verify_mcp.sh
agent/: __init__.py
cli/: __init__.py
docs/: architecture.md  bugfix-repo-isolation.md  installation.md  troubleshooting.md  usage.md
docs/features/: bulk-close.md  interactive-workflow.md
examples/: basic_usage.py
mcp_server/: __init__.py  config.py  models.py  patterns.py  server.py
mcp_server/tools/: __init__.py  analysis.py  code_ops.py  comments.py  github_api.py  interactive.py  smart_analysis.py
mcp_server/utils/: __init__.py  git_detector.py
scripts/: github-pr-comments-template.py  install-mcp-wrapper.sh
tests/: __init__.py  test_github_api.py  test_repo_isolation.py
tests/fixtures/: sample_threads.json
